0.6.2
-------------------------------------------------------------------------------
 * When externalizing plists and if fdatasync(2) is available, use it
   rather than fsync(2) which can be expensive some times.

0.6.1
-------------------------------------------------------------------------------
 * Fixed a syntax error in generated pkg-config file.
 * Fixed zlib's decompressor code to work with 1.2.6.
 * Changed zlib's decompressor to process chunks of 8K. This seems to give
   a small performance improvement to many real cases.

0.6.0
-------------------------------------------------------------------------------
 * Synced proplib with NetBSD HEAD, with the following changes:
	- Fixed a segfault in prop_dictionary_equals(3).
	- New interfaces added to prop_{array,dictionary}_util(3):
		* prop_array_set_and_rel()
		* prop_dictionary_set_and_rel()
		* prop_dictionary_get_dict()
	- Markup, typos, etc for the manual pages.

 * New interfaces added to prop_array_util(3):
	* prop_array_add_cstring()
	* prop_array_add_cstring_nocopy()

0.5.1
-------------------------------------------------------------------------------
 * Added pkg-config support and install a proplib.pc file.

 * Merged stuff from old subversion repo, that re-added the change to emit
   base 10 rather than base 16 for unsigned numbers contributed by Adam Hoka.
  
0.5.0
-------------------------------------------------------------------------------
 * Synced proplib code with NetBSD HEAD, which replaces the red-black tree
   implementation and checks for NULL pointers passed in to the _dict/_array
   functions.

 * The _zfile functions in the API are now encapsulated into its own file,
   that way upstream changes are merged easily.

 * The list of public API exported symbols is now handled via libtool's
   -exported-symbols option so that local symbols don't pollute the API.

 * Explicitly require a C99 compiler. Don't want to waste time in non C99
   compilers.
